Update email template

--- a/src/ECommerceBackend.Web/ECommerceBackend.Web.csproj
+++ b/src/ECommerceBackend.Web/ECommerceBackend.Web.csproj
@@ -46,4 +46,10 @@
     </Compile>
   </ItemGroup>
   
+  <ItemGroup>
+    <None Update="EmailTemplates\OrderedProducts.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
 </Project>
